update event logic handling status
