# src/main/java/org/servament/dto/UpdateEventDTO.java
@@ -4,8 +4,6 @@ import java.time.Instant;
 import java.util.UUID;
 
 import jakarta.validation.constraints.Future;
-import jakarta.validation.constraints.NotBlank;
-import jakarta.validation.constraints.NotNull;
 import lombok.AllArgsConstructor;
 import lombok.Data;
 import lombok.NoArgsConstructor;
@@ -13,9 +11,8 @@ import lombok.NoArgsConstructor;
 @Data
 @NoArgsConstructor
 @AllArgsConstructor
-public class CreateEventDTO {
+public class UpdateEventDTO {
     
-    @NotNull
     private UUID activity;
 
     @Future
@@ -26,10 +23,8 @@ public class CreateEventDTO {
 
     private UUID location;
 
-    @NotBlank
     private String code;
 
-    @NotNull
     private UUID supplier;
 
     private Integer availability;
