# src/main/resources/apis/openapi.yaml
@@ -214,11 +214,62 @@ paths:
         required: true
         schema:
           $ref: "#/components/schemas/UUID"
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/UpdateEventDTO"
       responses:
         "200":
           description: OK
           content:
-            application/json: {}
+            application/json:
+              schema:
+                $ref: "#/components/schemas/EventDTO"
+  /events/{id}/close:
+    post:
+      tags:
+      - Event Resource
+      parameters:
+      - name: id
+        in: path
+        required: true
+        schema:
+          $ref: "#/components/schemas/UUID"
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/ClosingEventDTO"
+      responses:
+        "201":
+          description: Created
+  /events/{id}/complete:
+    post:
+      tags:
+      - Event Resource
+      parameters:
+      - name: id
+        in: path
+        required: true
+        schema:
+          $ref: "#/components/schemas/UUID"
+      responses:
+        "201":
+          description: Created
+  /events/{id}/publish:
+    post:
+      tags:
+      - Event Resource
+      parameters:
+      - name: id
+        in: path
+        required: true
+        schema:
+          $ref: "#/components/schemas/UUID"
+      responses:
+        "201":
+          description: Created
   /events:paged:
     get:
       tags:
@@ -394,6 +445,15 @@ components:
       - REJECTED
       - CANCELLED
       type: string
+    ClosingEventDTO:
+      required:
+      - note
+      type: object
+      properties:
+        note:
+          maxLength: 1000
+          pattern: \S
+          type: string
     CreateEventDTO:
       required:
       - activity
@@ -407,11 +467,6 @@ components:
           $ref: "#/components/schemas/Instant"
         estimatedEndDateTime:
           $ref: "#/components/schemas/Instant"
-        endDateTime:
-          $ref: "#/components/schemas/Instant"
-        note:
-          maxLength: 1000
-          type: string
         location:
           $ref: "#/components/schemas/UUID"
         code:
@@ -583,6 +638,24 @@ components:
       format: uuid
       pattern: "[a-fA-F0-9]{8}-[a-fA-F0-9]{4}-[a-fA-F0-9]{4}-[a-fA-F0-9]{4}-[a-fA-F0-9]{12}"
       type: string
+    UpdateEventDTO:
+      type: object
+      properties:
+        activity:
+          $ref: "#/components/schemas/UUID"
+        startDateTime:
+          $ref: "#/components/schemas/Instant"
+        estimatedEndDateTime:
+          $ref: "#/components/schemas/Instant"
+        location:
+          $ref: "#/components/schemas/UUID"
+        code:
+          type: string
+        supplier:
+          $ref: "#/components/schemas/UUID"
+        availability:
+          format: int32
+          type: integer
     UpdateOperationDTO:
       type: object
       properties:
